<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm">

        <TextView style="@style/item" android:text="@string/address"/>
        <EditText style="@style/item" android:id="@+id/address"/>

        <TextView
            style="@style/item"
            android:text="@string/address2" />

        <EditText
            android:id="@+id/address2"
            style="@style/item" />

        <TextView style="@style/item" android:text="@string/port"/>

        <EditText
            android:id="@+id/port"
            style="@style/item"
            android:inputType="number"
            android:text="54321" />
        <TextView style="@style/item" android:text="@string/secret"/>

        <EditText
            android:id="@+id/secret"
            style="@style/item"
            android:password="true"
            android:text="test" />
        <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect"/>
        <Button style="@style/item" android:id="@+id/disconnect" android:text="@string/disconnect"/>

        <Button
            android:id="@+id/check"
            style="@style/item"
            android:onClick="checkStatus"
            android:text="@string/check" />
    </LinearLayout>
</ScrollView>